--- a/src/app/features/underwriting/underwriting.component.html
+++ b/src/app/features/underwriting/underwriting.component.html
@@ -9,6 +9,7 @@
       <input
         [type]="field.type"
         [value]="property.underwritingInputs[field.key]"
+        [disabled]="property.isHistorical"
         (change)="onUnderwritingFieldChange(field.key, $event)"
       />
       <div class="field-error" *ngIf="getUnderwritingFieldError(field.key)">{{ getUnderwritingFieldError(field.key) }}</div>
@@ -47,7 +48,7 @@
           <ng-container *ngIf="!tenant.isDeleted || tenant.isVacant">
             <td>
               <input
-                [disabled]="tenant.isVacant || tenant.isDeleted"
+                [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.tenantName"
                 (change)="onTenantFieldChange(tenant, 'tenantName', $event)"
               />
@@ -55,7 +56,7 @@
             </td>
             <td>
               <select
-                [disabled]="tenant.isVacant || tenant.isDeleted"
+                [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.creditType"
                 (change)="onTenantFieldChange(tenant, 'creditType', $event)"
               >
@@ -67,28 +68,28 @@
               <div class="field-error" *ngIf="getTenantFieldError('creditType')">{{ getTenantFieldError('creditType') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.squareFeet" (change)="onTenantFieldChange(tenant, 'squareFeet', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.squareFeet" (change)="onTenantFieldChange(tenant, 'squareFeet', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('squareFeet')">{{ getTenantFieldError('squareFeet') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.rentPsf" (change)="onTenantFieldChange(tenant, 'rentPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.rentPsf" (change)="onTenantFieldChange(tenant, 'rentPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('rentPsf')">{{ getTenantFieldError('rentPsf') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.annualEscalations" (change)="onTenantFieldChange(tenant, 'annualEscalations', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.annualEscalations" (change)="onTenantFieldChange(tenant, 'annualEscalations', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('annualEscalations')">{{ getTenantFieldError('annualEscalations') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseStart | date : 'yyyy-MM-dd'" (change)="onTenantFieldChange(tenant, 'leaseStart', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseStart | date : 'yyyy-MM-dd'" (change)="onTenantFieldChange(tenant, 'leaseStart', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('leaseStart')">{{ getTenantFieldError('leaseStart') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseEnd | date : 'yyyy-MM-dd'" (change)="onTenantFieldChange(tenant, 'leaseEnd', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseEnd | date : 'yyyy-MM-dd'" (change)="onTenantFieldChange(tenant, 'leaseEnd', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('leaseEnd')">{{ getTenantFieldError('leaseEnd') }}</div>
             </td>
             <td>
               <select
-                [disabled]="tenant.isVacant || tenant.isDeleted"
+                [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.leaseType"
                 (change)="onTenantFieldChange(tenant, 'leaseType', $event)"
               >
@@ -101,7 +102,7 @@
             </td>
             <td>
               <select
-                [disabled]="tenant.isVacant || tenant.isDeleted"
+                [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.renew"
                 (change)="onTenantFieldChange(tenant, 'renew', $event)"
               >
@@ -113,15 +114,15 @@
               <div class="field-error" *ngIf="getTenantFieldError('renew')">{{ getTenantFieldError('renew') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.downtimeMonths" (change)="onTenantFieldChange(tenant, 'downtimeMonths', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.downtimeMonths" (change)="onTenantFieldChange(tenant, 'downtimeMonths', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('downtimeMonths')">{{ getTenantFieldError('downtimeMonths') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.tiPsf" (change)="onTenantFieldChange(tenant, 'tiPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.tiPsf" (change)="onTenantFieldChange(tenant, 'tiPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('tiPsf')">{{ getTenantFieldError('tiPsf') }}</div>
             </td>
             <td>
-              <input [disabled]="tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.lcPsf" (change)="onTenantFieldChange(tenant, 'lcPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.lcPsf" (change)="onTenantFieldChange(tenant, 'lcPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError('lcPsf')">{{ getTenantFieldError('lcPsf') }}</div>
             </td>
             <td>
