--- a/src/app/features/property-details/property-details.component.html
+++ b/src/app/features/property-details/property-details.component.html
@@ -6,6 +6,7 @@
     <div class="kv" *ngFor="let item of leftInfoFields">
       <label>{{ item.label }}</label>
       <input
+        [type]="getFieldInputType(item.key)"
         [value]="property.propertyDetails[item.key]"
         [disabled]="item.key === 'address' || property.isHistorical"
         (input)="onDetailFieldChange(item.key, $event)"
@@ -19,7 +20,7 @@
       <h3>Listing Details</h3>
       <div class="kv" *ngFor="let item of listingFields">
         <label>{{ item.label }}</label>
-        <input [value]="property.propertyDetails[item.key]" [disabled]="property.isHistorical" (input)="onDetailFieldChange(item.key, $event)" />
+        <input [type]="getFieldInputType(item.key)" [value]="property.propertyDetails[item.key]" [disabled]="property.isHistorical" (input)="onDetailFieldChange(item.key, $event)" />
         <div class="field-error" *ngIf="getPropertyFieldError(item.key)">{{ getPropertyFieldError(item.key) }}</div>
       </div>
     </section>
@@ -75,7 +76,7 @@
     <h3>Property Specs</h3>
     <div class="kv" *ngFor="let item of specsFields">
       <label>{{ item.label }}</label>
-      <input [value]="property.propertyDetails[item.key]" [disabled]="property.isHistorical" (input)="onDetailFieldChange(item.key, $event)" />
+      <input [type]="getFieldInputType(item.key)" [value]="property.propertyDetails[item.key]" [disabled]="property.isHistorical" (input)="onDetailFieldChange(item.key, $event)" />
       <div class="field-error" *ngIf="getPropertyFieldError(item.key)">{{ getPropertyFieldError(item.key) }}</div>
     </div>
   </section>
